overflows corrected

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -6,7 +6,7 @@
     padding: 5%;
     padding-top: 10%;
     gap: 45px;
-    
+    overflow: hidden;
     h1{
         color: #E2E2E2;
         font-weight: bold;
