--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,4 +1,6 @@
-
+.hero-all{
+ overflow: hidden;
+}
 .hero-section {
   
     display:flex;
