--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -8,6 +8,7 @@
     gap: 60px;
     margin: 0%;
     padding-bottom: 10%;
+    overflow: hidden;
     
 }
 .heading{
